--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "build:ui": "rm -rf build && cd ../bloglist-frontend && npm run build --prod && cp -r build ../bloglist-backend/ && cd ../bloglist-backend",
     "deploy": "git push heroku main",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.4.1",
+    "jest": "^27.4.3",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
@@ -26,5 +27,8 @@
     "express": "^4.17.1",
     "json-parser": "^3.1.2",
     "mongoose": "^6.1.1"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
