--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "json-parser": "^3.1.2",
+    "lodash": "^4.17.21",
     "mongoose": "^6.1.1"
   },
   "jest": {
